Bug 148227 - Writer track changes: missing Undo of tracked row deletion in Hide Changes mode
Summary: Writer track changes: missing Undo of tracked row deletion in Hide Changes mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.3
Keywords: filter:docx
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2022-03-28 06:36 UTC by NISZ LibreOffice Team
Modified: 2022-04-05 11:03 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-03-28 06:36:50 UTC
Description:
Deleting tables in Hide Changes mode with change tracking results lost tables using Undo: the undeleted tables aren’t visible, they appear again only by saving/reload document.
Follow-up to https://bugs.documentfoundation.org/show_bug.cgi?id=146962 and https://bugs.documentfoundation.org/show_bug.cgi?id=147347.


Steps to Reproduce:
1.Enable recording of track changes.
2.Disable Show Changes, i.e. enable Hide Changes mode.
3.Delete a table row. The row disappears.
4.Click on Undo. The row will not reappear.

Actual Results:
Undeleted rows aren’t visible in Hide Changes mode.

Expected Results:
Undeleted rows are visible in Hide Changes mode.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 6adabd915d931b845fcf2fef15fbf3fca14ec9b3
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2022-03-28 07:42:08 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0c6221e1545e7b96d9df23cdc24302c28ae935b8

tdf#148227 sw: fix Undo of tracked row deletion in Hide Changes mode

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2022-03-28 18:53:50 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/e07ea7a6f5f7059663e99daa97cbda5e63b141dd

tdf#148227 sw: fix Undo of tracked row deletion in Hide Changes mode

It will be available in 7.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2022-03-31 06:37:40 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: a3988b2d147a2442b348d58b79dbd6e71472b7af
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 4 Timur 2022-04-05 11:03:25 UTC
*** Bug 148332 has been marked as a duplicate of this bug. ***