tdf#148227 sw: fix Undo of tracked row deletion in Hide Changes mode

In Hide Changes mode, table frames weren't displayed again
during Undo of tracked deletion of table rows, only by saving
and reloading the document.

Follow-up to commit a74c51025fa4519caaf461492e4ed8e68bd34885
"tdf#146962 sw: hide deleted row at deletion in Hide Changes"
and commit 794fd10af7361d5a64a0f8bfbe5c8b5f308617a5
"tdf#147347 sw: hide deleted table at deletion in Hide Changes".

Change-Id: I7ffe8a3687d1d385a549f7d438f7058d829ffd8c